# desktop-ee88

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  MaxHub.spec  build.py  installer.iss  main.py  manager.py  pyproject.toml  requirements-dev.txt  run_server.bat  run_tests.py  websocket_architecture.md
GoDesktop/: CMakeLists.txt  TIEUCHUAN.md
GoDesktop/assets/: resources.qrc
GoDesktop/src/: main.cpp
GoDesktop/src/core/: add_agent_dialog.cpp  add_agent_dialog.h  api_client.cpp  api_client.h  api_error.cpp  api_error.h  auth_i18n.cpp  auth_i18n.h  auth_widget.cpp  auth_widget.h  auth_window.cpp  auth_window.h  confirm_dialog.cpp  confirm_dialog.h  cookies_dialog.cpp  cookies_dialog.h  customers_page.cpp  customers_page.h  date_range_picker.cpp  date_range_picker.h  flow_layout.cpp  flow_layout.h  home_page.cpp  home_page.h  icon_defs.h  loading_overlay.cpp  loading_overlay.h  login_widget.cpp  login_widget.h  main_widget.cpp  main_widget.h  register_widget.cpp  register_widget.h  report_page_builder.cpp  report_page_builder.h  report_pages.cpp  report_pages.h  settings_dialog.cpp  settings_dialog.h  theme_manager.cpp  (+11 more)
GoDesktop/src/utils/: feedback.cpp  feedback.h  upstream_translate.cpp  upstream_translate.h
Goserver/: .dockerignore  .env.example  Dockerfile  README.md  go.mod  go.sum
Goserver/cmd/server/: main.go
Goserver/docs/: api-design.md
Goserver/internal/cache/: redis_cache.go
Goserver/internal/config/: config.go
Goserver/internal/database/: migration.go  postgres.go
Goserver/internal/handler/: agent_handler.go  auth_handler.go  customer_handler.go  health_handler.go  oauth_handler.go  proxy_handler.go
Goserver/internal/middleware/: auth.go  body_limit.go  cors.go  gzip.go  logger.go  ratelimit.go  recovery.go  security.go  timeout.go
Goserver/internal/model/: agent.go  errors.go  upstream.go  user.go
Goserver/internal/repository/: agent_repo.go  interfaces.go  user_repo.go
Goserver/internal/service/: agent_cache.go  agent_service.go  auth_service.go  customer_service.go  ee88_login_service.go  email_service.go  oauth_service.go  proxy_service.go  scheduler.go
Goserver/pkg/utils/: agent_encrypt.go  captcha_solver.go  circuit_breaker.go  crypto.go  distributed_lock.go  hash.go  http.go  proc_unix.go  proc_windows.go  retry.go  upstream_client.go
Goweb/: Dockerfile  GoWeb.nginx.conf  package.json  pnpm-lock.yaml
Goweb/docs/: index.html  shims-vue.d.ts  tsconfig.json  vite.config.ts
Goweb/docs/src/components/: PageLayout.vue
Goweb/docs/src/composables/: useQuickDate.ts
Goweb/docs/src/language/: en_US.ts  shared_loader.ts  vi_VN.ts  zh_CN.ts
Goweb/docs/src/layouts/: Layout.vue
Goweb/docs/src/router/: index.ts  zh-CN.ts
Goweb/docs/src/store/: auth.ts
Goweb/docs/src/utils/: api.ts  feedback.ts  sort_by_time.ts
Goweb/docs/src/view/: customers.vue  (+1 more)
core/: app_window.py  base_widgets.py  i18n.py  icon.py  theme.py
dialogs/: about_dialog.py  confirm_dialog.py  file_dialog.py  form_dialog.py  input_dialog.py  login_window.py  update_dialog.py
docs/: API.md  data_sync_architecture_1.md
docs/plans/: 2026-03-05-collapsible-sidebar-design.md  2026-03-05-collapsible-sidebar.md
i18n/: en.json  vi.json  zh.json
icons/: _failed.txt
monitoring/: __init__.py  audit_trail.py  crash_reporter.py  health_checker.py  manager.py  metrics.py
scripts/: solve-captcha.py
server/: .env.example  __init__.py  auth.py  config.py  database.py  main.py  models.py  ws_manager.py
server/routes/: __init__.py  agent_routes.py  auth_routes.py  group_routes.py  system_routes.py  upstream_routes.py  user_routes.py  ws_routes.py
shared/lang/: en_US.json  vi_VN.json  zh_CN.json
shared/theme/: colors.json
tabs/: _upstream_tab.py  account_tab.py  bet_lottery_tab.py  bet_provider_tab.py  customer_tab.py  deposit_tab.py  example_tab.py  home_tab.py  lottery_tab.py  provider_tab.py  referral_tab.py  settings_tab.py  transaction_tab.py  withdraw_tab.py
tests/: conftest.py
tests/fixtures/: sample_data.json
tests/helpers/: assertions.py  factories.py  mocks.py
tests/integration/: test_api_integration.py  test_group_routes.py
tests/performance/: test_benchmarks.py
tests/ui/: test_widgets.py
tests/unit/: test_api_client.py  test_auth_server.py  test_config.py  test_formatters.py  test_models.py  test_validators.py
utils/: api.py  auth.py  db.py  export_table.py  formatters.py  notification_service.py  settings.py  table_helper.py  thread_worker.py  updater.py  upstream.py  upstream_auth.py  validators.py  ws_client.py
widgets/: badge.py  breadcrumb.py  date_range_picker.py  empty_state.py  error_state.py  expand_card.py  form_widget.py  loading.py  notification_bell.py  notify.py  pagination.py  search_bar.py  sidebar.py  stat_card.py  table_crud.py  toolbar_widget.py  tooltip.py
(+11 files in other folders)
